<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.terry</groupId>
  <artifactId>terry</artifactId>
  <version>1.0.0</version>
  <url>https://github.com/ogallagher/terry</url>
  <name>Terry</name>
  <description>Terry the virtual secretary</description>
  
  <dependencies>
  	<dependency>
  		<!-- speech api client; used for transcription -->
		<groupId>com.google.cloud</groupId>
		<artifactId>google-cloud-speech</artifactId>
		<version>1.22.2</version>
	</dependency>
	<dependency>
		<!-- vision api client; used for visual text recognition -->
		<groupId>com.google.cloud</groupId>
		<artifactId>google-cloud-vision</artifactId>
		<version>1.99.1</version>
	</dependency>
	<dependency>
		<!-- subdependency for google cloud client libs -->
		<groupId>io.grpc</groupId>
		<artifactId>grpc-netty</artifactId>
		<version>1.25.0</version>
	</dependency>
	<!-- javacv and subdependency jars are manually copied into lib-javacv -->
  </dependencies>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>